footer added to include copyright

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
         quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 
+        <footer>
+            <p>Copyright &copy;</p>
+        </footer>
 </body>
 
 </html>
