contact page basic content structure and updates to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Molly McDevitt</title>
-    <link href="/Users/mollymcdevitt/Desktop/code/Basic-Portfolio/assets/css" rel="stylesheet" type="text/css">
+    <link href="/Users/mollymcdevitt/Desktop/code/Basic-Portfolio/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,6 +16,7 @@
         <p>Contact</p>
     </nav>
     <h2>About Me</h2>
+    <hr>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Anatomy_of_a_Sunset-2.jpg/300px-Anatomy_of_a_Sunset-2.jpg"
         alt="placeholder">
     <p>(placeholder image)</p>
