text boxes added to contact page and format changes to index

--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,25 @@
         <p>Portfolio</p>
         <p>Contact</p>
     </nav>
-  <h2>Contact</h2>
-  <hr>
+    <h2>Contact</h2>
+    <hr>
+    <br>
+    <p>Name</p>
+    <form action="/cgi-bin/hello_get.cgi" method="get">
+        <input type="text" name="first_name" />
+        <br>
+        <p>Email</p>
+        <form action="/cgi-bin/hello_get.cgi" method="get">
+            <input type="text" name="first_name" />
+            <br><br>
+            <p>Message</p>
+            <textarea rows="4" cols="50">
 
-  <footer>
-     <p>Copyright &copy;</p>
-  </footer>
+  </textarea>
+
+            <footer>
+                <p>Copyright &copy;</p>
+            </footer>
 </body>
 
 </html>
