--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Molly McDevitt</title>
+    <title>About</title>
     <link href="/Users/mollymcdevitt/Desktop/code/Basic-Portfolio/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
