about me content added to paragraphs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
     <title>About</title>
@@ -22,29 +22,28 @@
             <h2>About Me</h2>
             <img id="img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Anatomy_of_a_Sunset-2.jpg/300px-Anatomy_of_a_Sunset-2.jpg"
                 alt="placeholder">
-            <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem
-                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo.
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-                dolores
-                eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-                amet,
-                consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-                aliquam
-                quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-                laboriosam,
-                nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
-                velit
-                esse
-                quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-            </section>
-         </div>
-</div>
+            <p> My name is Molly McDevitt and I am a twenty year old beginning a fulfilling career in web
+                development. I graduated from Portsmouth High School in 2016 and decided to forego the typical college
+                route to instead travel and take more time to discover my true passions. After a year of splitting my
+                time between travel and work, I decided to try my hand at different job opportunities, which eventually
+                led me to a conversation with a family friend who has over twenty five years of experience as a woman
+                in technology. The exchange sparked an interest and as I dove deeper into my research of the industry,
+                I realized the incredible creative and professional opportunities available to full stack developers-
+                and here we are!</p>
 
-<footer>
-    <p>Copyright &copy;</p>
-</footer>
+            <p> Outside of web development I enjoy reading, playing and writing music, poetry, yoga and being in
+                nature. I believe that we are defined by our passions and our willingness to pursue them, and I am
+                extremely excited to begin cultivating mine for web development!
+            </p>
+
+
+        </section>
+    </div>
+
+
+    <footer>
+        Copyright &copy;
+    </footer>
 </body>
 
 </html>
