--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>About</title>
-    <link href="/Users/mollymcdevitt/Desktop/code/Basic-Portfolio/assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 time between travel and work, I decided to try my hand at different job opportunities, which eventually
                 led me to a conversation with a family friend who has over twenty five years of experience as a woman
                 in technology. The exchange sparked an interest and as I dove deeper into my research of the industry,
-                I realized the incredible creative and professional opportunities available to full stack developers-
+                I realized the incredible creative and professional opportunities available to full stack developers -
                 and here we are!</p>
 
             <p> Outside of web development I enjoy reading, playing and writing music, poetry, yoga and being in
