--- a/portfolio.html
+++ b/portfolio.html
@@ -3,37 +3,48 @@
 
 <head>
     <title>Portfolio</title>
-    <link rel="stylesheet" type="/Users/mollymcdevitt/Desktop/code/Basic-Portfolio/assets/css/style.css" href="" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
 
 <body>
-    <h1>Molly McDevitt</h1>
-    <nav>
-        <p>About</p>
-        <p>Portfolio</p>
-        <p>Contact</p>
-    </nav>
-    <h2>Portfolio</h2>
-    <hr> 
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjNjy6JFpqdz3sRr3HP4KN-tP8Jx2F0rRWoBsU2s6SA2pW58NO0Q"
-        alt="project one" width="200px">
-    <p>project one</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCxjX9FdBKEDWn2sstSK4Evy4YNaw6_po2zNhgeD28t3G3vCG1HQ"
-        alt="project two" width="200px">
-    <p>project two</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMOiObXqqlKHbe4FzVaTf4PeOsXZvOa92W4SRsBkKilIFgJT4Yiw"
-        alt="project three" width="200px">
-    <p>project three</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAC21ab0oMe7OBHkPf22uQOcf_uJ69eP-mS_fcImCiSGxidZYjdQ"
-        alt="project four" width="200px">
-    <p>project four</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9-K1-PvdKx6z3Ic1dvZm9NNQZJKivMJrJM_PBzW_dpB3D74fn"
-        alt="project five" width="200px">
-    <p>project five</p>
+    <div id="head">
+        <header>
+        <h1>Molly McDevitt</h1>
+    </header>
+        <nav>
+            <p id="abt">About</p>
+            <p id="port">Portfolio</p>
+            <p id="cont">Contact</p>
+        </nav>
+    </div>
+    <div class="wrapper3">
+        <section id="content3">
+            <h2>Portfolio</h2>
+            <div class="row">
+                <div class="column">
+                    <img src="assets/images/project_one.jpg"
+                        alt="project one" width="200px">
+                    <p class="prj1">Project One</p>
+                    <img src="assets/images/project_two.jpg"
+                        alt="project two" width="200px">
+                    <p class="prj2">Project Two</p>
+                    <img src="assets/images/project_three.jpg"
+                        alt="project three" width="200px">
+                    <p class="prj3">Project Three</p>
+                    <img src="assets/images/project_four.jpg"
+                        alt="project four" width="200px">
+                    <p class="prj4">Project Four</p>
+                    <img src="assets/images/project_five.jpg"
+                        alt="project five" width="200px">
+                    <p class="prj5">Project Five</p>
+                </div>
+            </div>
+        </section>
+    </div>
 
-<footer>
-    <p>Copyright &copy;</p>
-</footer>
+    <footer>
+        Copyright &copy;
+    </footer>
 
 
 </body>
