added links to other pages in navbar, added submit button, edited size of form boxes

--- a/contact.html
+++ b/contact.html
@@ -12,29 +12,28 @@
             <h1>Molly McDevitt</h1>
         </header>
         <nav>
-            <p id="abt">About</p>
-            <p id="port">Portfolio</p>
-            <p id="cont">Contact</p>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </div>
     <div class="wrapper">
         <section id="content">
             <h2>Contact</h2>
 
-            <p>Name</p>
-            <textarea rows="1" cols="20">
-            </textarea>
-
-                <p>Email</p>
-                <textarea rows="1" cols="20">
-                    </textarea>
-
+            <form>
+                First name:<br>
+                <input type="text" name="firstname"><br>
+                Last name:<br>
+                <input type="text" name="lastname">
+              </form>
                     <p>Message</p>
                     <textarea rows="20" cols="110">
-
-
-
-  </textarea>
+                    </textarea>
+                    <br><br>
+            <form>
+                <input id="submit" type="submit" name="Submit">
+            </form>
         </section>
     </div>
     <footer>
