--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
         <h1>Molly McDevitt</h1>
     </header>
         <nav>
-            <p id="abt">About</p>
-            <p id="port">Portfolio</p>
-            <p id="cont">Contact</p>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </div>
     <div class="wrapper3">
