styling changes made to portfolio for positioning

--- a/contact.html
+++ b/contact.html
@@ -17,23 +17,23 @@
             <a href="contact.html">Contact</a>
         </nav>
     </div>
-    <div class="wrapper">
-        <section id="content">
+    <div class="wrapper3">
+        <section id="content3">
             <h2>Contact</h2>
 
             <form>
-                First name:<br>
+                First name<br>
                 <input type="text" name="firstname"><br>
-                Last name:<br>
+                Last name<br>
                 <input type="text" name="lastname">
-              </form>
-                    <p>Message</p>
-                    <textarea rows="20" cols="110">
+                <p>Message</p>
+                <textarea rows="20" cols="110">
+
                     </textarea>
-                    <br><br>
-            <form>
+                <br><br>
                 <input id="submit" type="submit" name="Submit">
             </form>
+
         </section>
     </div>
     <footer>
