--- a/portfolio.html
+++ b/portfolio.html
@@ -9,36 +9,42 @@
 <body>
     <div id="head">
         <header>
-        <h1>Molly McDevitt</h1>
-    </header>
+            <h1>Molly McDevitt</h1>
+        </header>
         <nav>
             <a href="index.html">About</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
     </div>
-    <div class="wrapper3">
-        <section id="content3">
+    <div class="wrapper2">
+        <section id="content2">
             <h2>Portfolio</h2>
             <div class="row">
-                <div class="column">
-                    <img src="assets/images/project_one.jpg"
-                        alt="project one" width="200px">
+                <div class="col-md-6">
+                    <img src="assets/images/project_one.jpg" alt="project one" width="200px">
                     <p class="prj1">Project One</p>
-                    <img src="assets/images/project_two.jpg"
-                        alt="project two" width="200px">
-                    <p class="prj2">Project Two</p>
-                    <img src="assets/images/project_three.jpg"
-                        alt="project three" width="200px">
-                    <p class="prj3">Project Three</p>
-                    <img src="assets/images/project_four.jpg"
-                        alt="project four" width="200px">
+                    <img src="assets/images/project_four.jpg" alt="project four" width="200px">
                     <p class="prj4">Project Four</p>
-                    <img src="assets/images/project_five.jpg"
-                        alt="project five" width="200px">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="assets/images/project_two.jpg" alt="project two" width="200px">
+                    <p class="prj2">Project Two</p>
+                    <img src="assets/images/project_five.jpg" alt="project five" width="200px">
                     <p class="prj5">Project Five</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+     <img src="assets/images/project_three.jpg" alt="project three" width="200px">
+            <p class="prj3">Project Three</p>
+                </div>
+            </div>
+       
+
+
         </section>
     </div>
 
